# scurve-after-the-shock

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/tables/: e1.json  e2.json  e3.json  nn_walkforward.json  robustness.json
configs/: base.yaml  fannie_layout.SOURCE.txt  fannie_layout.csv
docs/: leakage-audit.md
docs/paper/: paper.typ
docs/paper/archive/: SUPERSEDED.md
docs/paper/latex/: main.tex  references.bib
docs/research/: literature-survey.md
notebooks/: kaggle_nn_training.py
scripts/: export_kaggle.py  make_layout.py  run_cohorts.py  run_experiments.py  run_external.py  run_ingest.py  run_models.py  run_panel.py
src/scurve/: cohorts.py  config.py  dates.py  evaluate.py  external.py  features.py  ingest.py  panel.py  plotting.py  quality.py  runner.py  sample.py  schema.py
src/scurve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scurve/experiments/: e1_frozen.py  e2_scurves.py  e3_scenarios.py  robustness.py
src/scurve/models/: baseline.py  gbm.py  nn.py
tests/: test_cohorts.py  test_config.py  test_dates.py  test_e1.py  test_e2.py  test_e3.py  test_evaluate.py  test_external.py  test_features.py  test_ingest.py  test_models.py  test_nn.py  test_panel.py  test_plotting.py  test_runner.py  test_sample.py  test_schema.py
