[project]
name = "scurve"
version = "0.1.0"
description = "The S-Curve After the Shock: ML prepayment modeling on Fannie Mae loan-level data"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "polars>=1.5",
    "pandas>=2.2",
    "pyarrow>=16",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "shap>=0.45",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
